--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "web",
 	"require": {
 		"php": ">=5.5.0",
-		"psr/log": "*"
+		"psr/log": "*",
+		"twig/twig": "~1.0"
 	},
  	"autoload":{
 		"psr-0":{
